--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -2,10 +2,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Sue+Ellen+Francisco&display=swap");
 .home-container {
-  width: 96vw;
-  margin-left: 4vw;
+  width: 100vw;
   height: 100vh;
-  background-color: #102036;
+  background-color: #161616;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -19,30 +18,16 @@
   position: relative;
 }
 
-.home-container .sue {
-  color: #929292;
-  font-size: 70px;
-  font-family: "Sue Ellen Francisco", cursive;
-  height: 10px;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.home-container .sue2 {
-  color: #929292;
-  font-size: 60px;
-  font-family: "Sue Ellen Francisco", cursive;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  margin-left: 14px;
-}
-
 .home-container .home-titles-container {
   width: 1000px;
   z-index: 2;
   position: absolute;
+}
+
+@media (max-width: 1020px) {
+  .home-container .home-titles-container {
+    width: 100%;
+  }
 }
 
 .home-container .home-titles-container .line-wrap {
@@ -52,15 +37,21 @@
 
 .home-container .home-titles-container .line-wrap .line {
   height: 185px;
-  text-align: left;
+  text-align: center;
 }
 
 .home-container .home-titles-container .line-wrap .line .home-title-1 {
-  color: #dbdbdb;
+  color: #ffffff;
   font-family: "Roboto", sans-serif;
   font-size: 100px;
   font-weight: 500;
   margin: 2px auto;
+}
+
+@media (max-width: 1020px) {
+  .home-container .home-titles-container .line-wrap .line .home-title-1 {
+    font-size: 75px;
+  }
 }
 
 .home-container .home-titles-container .line-wrap .line .home-title-1 .chase {
@@ -69,57 +60,34 @@
 }
 
 .home-container .home-titles-container .line-wrap .line .home-title-1 .chase:hover {
-  color: #4ecca3;
+  color: #BB86F3;
 }
 
 .home-container .home-titles-container .line-wrap .line .home-title-2 {
-  color: #dbdbdb;
   font-family: "Roboto", sans-serif;
   color: #eeeeee80;
-  font-size: 20px;
-  margin-top: 25px;
+  font-size: 70px;
+  margin-top: 15px;
   font-weight: 400;
-  width: 600px;
+}
+
+@media (max-width: 1020px) {
+  .home-container .home-titles-container .line-wrap .line .home-title-2 {
+    font-size: 45px;
+  }
 }
 
 .home-container .home-titles-container .line-wrap .line .home-title-3 {
-  color: #dbdbdb;
   font-family: "Roboto", sans-serif;
   color: #eeeeee80;
   font-size: 20px;
+  margin-top: 15px;
   font-weight: 400;
 }
 
-.home-container .home-titles-container .line-wrap .line .home-title-3 span {
-  -webkit-transition: all ease 900ms;
-  transition: all ease 900ms;
-}
-
-.home-container .home-titles-container .line-wrap .line .home-title-3 span:hover {
-  cursor: pointer;
-  color: #4ecca3;
-}
-
-.home-container .home-social-icons {
-  height: 70px;
-  width: 190px;
-  margin-right: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: fixed;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  top: 0;
-  right: 0;
-  z-index: 10;
+@media (max-width: 1020px) {
+  .home-container .home-titles-container .line-wrap .line .home-title-3 {
+    font-size: 15px;
+  }
 }
 /*# sourceMappingURL=Home.css.map */
