--- a/src/SassGlobals/_variables.scss
+++ b/src/SassGlobals/_variables.scss
@@ -3,12 +3,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Sue+Ellen+Francisco&display=swap");
 
 $darkMetal1: #232931;
-$darkMetal: #102036;
-$lightMetal1: #393e46;
-$lightMetal: #2d3c53;
-$blu: #4ecca3;
-$whiteish: #dbdbdb;
-$greyish: #929292;
+$darkMetal: #161616;
+$lightMetal1: #303030;
+$lightMetal: #212121;
+$grey2: #212121;
+$blu: #BB86F3;
+$whiteish: #ffffff;
+$greyish: #ffffffa4;
 $roboto: "Roboto", sans-serif;
 $recursive: "Recursive", sans-serif;
 $sue: "Sue Ellen Francisco", cursive;
