--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -2,9 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Sue+Ellen+Francisco&display=swap");
 .projects-container {
-  width: 96vw;
-  margin-left: 4vw;
-  background-color: #102036;
+  width: 100vw;
+  background-color: #161616;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -35,6 +34,18 @@
   margin-top: 50px;
 }
 
+@media (max-width: 1020px) {
+  .projects-container .projects-body {
+    width: 700px;
+  }
+}
+
+@media (max-width: 710px) {
+  .projects-container .projects-body {
+    width: 500px;
+  }
+}
+
 .projects-container .projects-body .projects-body-title-container {
   width: 100%;
   text-align: left;
@@ -42,7 +53,7 @@
 }
 
 .projects-container .projects-body .projects-body-title-container h2 {
-  color: #929292;
+  color: #ffffffa4;
   font-family: "Recursive", sans-serif;
 }
 
@@ -57,15 +68,59 @@
           justify-content: space-evenly;
 }
 
+@media (max-width: 1020px) {
+  .projects-container .projects-body .project-body-one {
+    position: relative;
+  }
+}
+
+@media (max-width: 710px) {
+  .projects-container .projects-body .project-body-one {
+    height: 600px;
+  }
+}
+
 .projects-container .projects-body .project-body-one .project-body-one-info,
 .projects-container .projects-body .project-body-one .project-body-image-container {
   height: 100%;
   width: 50%;
 }
 
+.projects-container .projects-body .project-body-one .project-body-image-container img {
+  -webkit-filter: blur(1px) opacity(30%);
+          filter: blur(1px) opacity(30%);
+  -webkit-transition: all ease 400ms;
+  transition: all ease 400ms;
+  height: 300px;
+  width: 500px;
+}
+
+.projects-container .projects-body .project-body-one .project-body-image-container img:hover {
+  -webkit-filter: blur(0px) opacity(100%);
+          filter: blur(0px) opacity(100%);
+}
+
+@media (max-width: 1020px) {
+  .projects-container .projects-body .project-body-one .project-body-image-container img {
+    position: absolute;
+    right: 0;
+    -webkit-box-shadow: 4px 4px 4px #212121;
+            box-shadow: 4px 4px 4px #212121;
+    -webkit-filter: blur(2px) opacity(20%);
+            filter: blur(2px) opacity(20%);
+  }
+}
+
+@media (max-width: 710px) {
+  .projects-container .projects-body .project-body-one .project-body-image-container img {
+    height: 200px;
+    width: 350px;
+  }
+}
+
 .projects-container .projects-body .project-body-one .project-body-one-info {
   font-family: "Roboto", sans-serif;
-  color: #dbdbdb;
+  color: #ffffff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -76,36 +131,43 @@
           flex-direction: column;
 }
 
+@media (max-width: 1020px) {
+  .projects-container .projects-body .project-body-one .project-body-one-info {
+    position: absolute;
+    left: 0;
+  }
+}
+
 .projects-container .projects-body .project-body-one .project-body-one-info .project-body-one-title {
   width: 100%;
   height: 20%;
   font-size: 40px;
-  color: #4ecca3;
+  color: #BB86F3;
   font-family: "Recursive", sans-serif;
 }
 
 .projects-container .projects-body .project-body-one .project-body-one-info .project-body-one-about {
-  width: 90%;
+  width: 86%;
   height: 30%;
 }
 
 .projects-container .projects-body .project-body-one .project-body-one-info .project-body-one-tech {
   word-spacing: 20px;
-  color: #929292;
+  color: #ffffffa4;
   font-family: "Recursive", sans-serif;
   height: 15%;
 }
 
 .projects-container .projects-body .project-body-one .project-body-one-info .project-body-one-links {
   word-spacing: 20px;
-  color: #929292;
+  color: #ffffffa4;
   font-family: "Recursive", sans-serif;
 }
 
 .projects-container .projects-body .project-body-two {
   width: 100%;
   height: 400px;
-  border-bottom: #4ecca3 solid 1px;
+  border-bottom: #BB86F3 solid 1px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -114,15 +176,49 @@
           justify-content: space-evenly;
 }
 
+@media (max-width: 710px) {
+  .projects-container .projects-body .project-body-two {
+    height: 600px;
+  }
+}
+
 .projects-container .projects-body .project-body-two .project-body-two-info,
 .projects-container .projects-body .project-body-two .project-body-image-container {
   height: 100%;
   width: 50%;
 }
 
+.projects-container .projects-body .project-body-two .project-body-image-container img {
+  height: 300px;
+  width: 500px;
+  -webkit-filter: blur(1px) opacity(30%);
+          filter: blur(1px) opacity(30%);
+  -webkit-transition: all ease 400ms;
+  transition: all ease 400ms;
+}
+
+.projects-container .projects-body .project-body-two .project-body-image-container img:hover {
+  -webkit-filter: blur(0px) opacity(100%);
+          filter: blur(0px) opacity(100%);
+}
+
+@media (max-width: 1020px) {
+  .projects-container .projects-body .project-body-two .project-body-image-container img {
+    -webkit-filter: blur(2px) opacity(20%);
+            filter: blur(2px) opacity(20%);
+  }
+}
+
+@media (max-width: 710px) {
+  .projects-container .projects-body .project-body-two .project-body-image-container img {
+    height: 200px;
+    width: 350px;
+  }
+}
+
 .projects-container .projects-body .project-body-two .project-body-two-info {
   font-family: "Roboto", sans-serif;
-  color: #dbdbdb;
+  color: #ffffff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -141,7 +237,7 @@
   height: 20%;
   font-size: 40px;
   font-family: "Recursive", sans-serif;
-  color: #4ecca3;
+  color: #BB86F3;
 }
 
 .projects-container .projects-body .project-body-two .project-body-two-info .project-body-two-about {
@@ -151,14 +247,14 @@
 
 .projects-container .projects-body .project-body-two .project-body-two-info .project-body-two-tech {
   word-spacing: 20px;
-  color: #929292;
+  color: #ffffffa4;
   font-family: "Recursive", sans-serif;
   height: 15%;
 }
 
 .projects-container .projects-body .project-body-two .project-body-two-info .project-body-two-links {
   word-spacing: 20px;
-  color: #929292;
+  color: #ffffffa4;
   font-family: "Recursive", sans-serif;
 }
 
@@ -179,10 +275,11 @@
   width: 100%;
   height: 50px;
   text-align: left;
+  padding-bottom: 15px;
 }
 
 .projects-container .projects-body .project-body-extras .extra-projects-title-container h2 {
-  color: #929292;
+  color: #ffffffa4;
   font-family: "Recursive", sans-serif;
 }
 
@@ -191,7 +288,6 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 400px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -202,10 +298,18 @@
       flex-wrap: wrap;
 }
 
+@media (max-width: 1020px) {
+  .projects-container .projects-body .project-body-extras .project-thumbnails-container {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    margin-top: 10px;
+  }
+}
+
 .projects-container .projects-body .project-body-extras .project-thumbnails-container .project-thumbnail {
   height: 350px;
   width: 235px;
-  background-color: #2d3c53;
+  background-color: #303030;
   border-radius: 5px;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -217,15 +321,22 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.329);
-          box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.329);
-  border-bottom: #4ecca3 1px solid;
+  -webkit-box-shadow: 2px 2px 3px #212121;
+          box-shadow: 2px 2px 3px #212121;
+  border-bottom: #BB86F3 1px solid;
+}
+
+@media (max-width: 1020px) and (max-width: 1020px) {
+  .projects-container .projects-body .project-body-extras .project-thumbnails-container .project-thumbnail {
+    height: 300px;
+    margin: 15px 0 10px 0;
+  }
 }
 
 .projects-container .projects-body .project-body-extras .project-thumbnails-container .project-thumbnail .project-thumbnail-title-container {
   width: 80%;
   height: 20%;
-  color: #dbdbdb;
+  color: #ffffff;
   font-family: "Recursive", sans-serif;
   text-align: left;
 }
@@ -234,14 +345,14 @@
   width: 80%;
   height: 50%;
   text-align: left;
-  color: #dbdbdb;
+  color: #ffffff;
   font-family: "Roboto", sans-serif;
 }
 
 .projects-container .projects-body .project-body-extras .project-thumbnails-container .project-thumbnail .project-thumbnail-tech {
   width: 80%;
   height: 10%;
-  color: #929292;
+  color: #ffffffa4;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
