--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -1,9 +1,19 @@
 @import "../../SassGlobals/variables.scss";
 
+@mixin break1 {
+  @media (max-width: 1020px) {
+    @content;
+  }
+}
+
+@mixin break2 {
+  @media (max-width: 710px) {
+    @content;
+  }
+}
+
 .projects-container {
-  width: 96vw;
-  margin-left: 4vw;
-  // height: 100vh;
+  width: 100vw;
   background-color: $darkMetal;
   display: flex;
   justify-content: center;
@@ -16,6 +26,12 @@
     flex-direction: column;
     align-items: center;
     margin-top: 50px;
+    @include break1(){
+      width: 700px;
+    }
+    @include break2(){
+      width: 500px;
+    }
     .projects-body-title-container {
       width: 100%;
       text-align: left;
@@ -30,10 +46,37 @@
       height: 400px;
       display: flex;
       justify-content: space-evenly;
+      @include break1(){
+        position: relative;
+      }
+      @include break2(){
+        height: 600px;
+      }
       .project-body-one-info,
       .project-body-image-container {
         height: 100%;
         width: 50%;
+      }
+      .project-body-image-container{
+        img{
+          filter: blur(1px) opacity(30%);
+          transition: all ease 400ms;
+          height: 300px;
+          width: 500px;
+          &:hover{
+            filter: blur(0px) opacity(100%);
+          }
+          @include break1(){
+            position: absolute;
+            right: 0;
+            box-shadow: 4px 4px 4px $lightMetal;
+            filter: blur(2px) opacity(20%);
+          }
+          @include break2(){
+            height: 200px;
+            width: 350px;
+          }
+        }
       }
       .project-body-one-info {
         font-family: $roboto;
@@ -41,6 +84,10 @@
         display: flex;
         text-align: left;
         flex-direction: column;
+        @include break1(){
+          position: absolute;
+          left: 0;
+        }
         .project-body-one-title {
           width: 100%;
           height: 20%;
@@ -49,7 +96,7 @@
           font-family: $recursive;
         }
         .project-body-one-about {
-          width: 90%;
+          width: 86%;
           height: 30%;
         }
         .project-body-one-tech {
@@ -71,10 +118,31 @@
       border-bottom: $blu solid 1px;
       display: flex;
       justify-content: space-evenly;
+      @include break2(){
+        height: 600px;
+      }
       .project-body-two-info,
       .project-body-image-container {
         height: 100%;
         width: 50%;
+      }
+      .project-body-image-container{
+        img{
+          height: 300px;
+          width: 500px;
+          filter: blur(1px) opacity(30%);
+          transition: all ease 400ms;
+          &:hover{
+            filter: blur(0px) opacity(100%);
+          }
+          @include break1(){
+            filter: blur(2px) opacity(20%);
+          }
+          @include break2(){
+            height: 200px;
+            width: 350px;
+          }
+        }
       }
       .project-body-two-info {
         font-family: $roboto;
@@ -117,6 +185,7 @@
         width: 100%;
         height: 50px;
         text-align: left;
+        padding-bottom: 15px;
         h2 {
           color: $greyish;
           font-family: $recursive;
@@ -125,20 +194,30 @@
       .project-thumbnails-container {
         width: 100%;
         display: flex;
-        height: 400px;
+        // height: 400px;
         justify-content: space-between;
         align-items: center;
         flex-wrap: wrap;
+        @include break1(){
+          justify-content: space-around;
+          margin-top: 10px;
+        }
         .project-thumbnail{
           height: 350px;
           width: 235px;
-          background-color: $lightMetal;
+          background-color: $lightMetal1;
           border-radius: 5px;
           align-items: center;
           display: flex;
           flex-direction: column;
-          box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.329);
+          box-shadow: 2px 2px 3px $lightMetal;
           border-bottom: $blu 1px solid;
+          @include break1(){
+            @include break1(){
+              height: 300px;
+              margin: 15px 0 10px 0;
+            }
+          }
           .project-thumbnail-title-container{
             width: 80%;
             height: 20%;
