--- a/src/Components/SideNav/SideNav.scss
+++ b/src/Components/SideNav/SideNav.scss
@@ -1,7 +1,7 @@
 @import "../../SassGlobals/variables.scss";
 
 .side-nav-container {
-  background-color: $lightMetal;
+  background-color: $darkMetal;
   height: 100%;
   width: 4vw;
   min-width: 60px;
