--- a/src/Components/TopNav/TopNav.css
+++ b/src/Components/TopNav/TopNav.css
@@ -1,43 +1,36 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Sue+Ellen+Francisco&display=swap");
-.side-nav-container {
+.top-nav-container {
   background-color: #161616;
-  height: 100%;
-  width: 4vw;
-  min-width: 60px;
+  height: 50px;
+  min-height: 50px;
+  width: 100vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   position: fixed;
   z-index: 3;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-shadow: 2px 2px 2px #212121;
+          box-shadow: 2px 2px 2px #212121;
 }
 
-.side-nav-container .side-nav-links {
+.top-nav-container .top-nav-links {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  height: 350px;
-  width: 50px;
+  height: 50px;
+  width: 200px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  margin: auto;
 }
-/*# sourceMappingURL=SideNav.css.map */
+/*# sourceMappingURL=TopNav.css.map */
