--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -12,6 +12,19 @@
   }
 }
 
+@mixin  break3 {
+  @media (max-width: 500px) {
+    @content
+  }
+}
+
+@mixin break4 {
+  @media (max-width: 380px){
+    @content
+  }
+}
+
+
 .about-container {
   width: 100vw;
   height: 100vh;
@@ -31,6 +44,12 @@
     }
     @include break2(){
       width: 500px;
+    }
+    @include break3(){
+      width: 400px;
+    }
+    @include break4(){
+      width: 360px;
     }
     display: flex;
     flex-wrap: wrap;
@@ -76,6 +95,14 @@
           margin: auto;
           margin-left: 50px;
         }
+        @include break3(){
+          width: 200px;
+          margin-left: 20px;
+        }
+        @include break4(){
+          width: 100px;
+          margin-left: 0px;
+        }
       }
     }
     .about-contact{
@@ -108,6 +135,11 @@
           margin: auto;
           height: 50px;
           text-align: left;
+        }
+        @include break4(){
+          font-size: 12px;
+          padding-top: 15px;
+          margin: auto;
         }
       }
       .phn-num{
@@ -145,10 +177,16 @@
       @include break2(){
         padding-top: 10px;
       }
+      @include break3(){
+        padding-top: 0px;
+      }
       .planet-icon{
         height: 100px;
         @include break1(){
           height: 40px;
+        }
+        @include break3(){
+          height: 20px;
         }
       }
     }
@@ -157,7 +195,9 @@
       height: 10px;
       color: $whiteish;
       font-family: $roboto;
-
+      h6{
+        margin-top: 5px;
+      }
     }
   }
 }
