--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -24,6 +24,12 @@
   }
 }
 
+@mixin vertBreak1 {
+  @media (max-height: 813px) {
+    @content
+  }
+}
+
 
 .about-container {
   width: 100vw;
@@ -170,6 +176,9 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      @include vertBreak1(){
+        display: none;
+      }
       @include break1(){
         height: 40px;
         margin-top: 110px;
@@ -191,6 +200,9 @@
       }
     }
     .about-socials-container{
+      @include vertBreak1(){
+        display: none;
+      }
       width: 100%;
       height: 10px;
       color: $whiteish;
